<resources>
    <string name="aboutEmail">canieatthisapp@gmail.com</string>
    <string name="aboutLegal">CanIEatThis cannot guarantee the accuracy of the information and data provided (including, but not limited to, the product data: barcode, name, quantity, energy values, ingredients, allergens, traces and dietary suggestions; places data: suitability).\nThe information and data is entered by other users of the app and can therefore contain errors and inaccurate information.\n\nWith thanks to Open Food Facts for supplying product data.</string>
    <string name="action_about">About</string>
    <string name="action_search">Search Ingredient</string>
    <string name="action_settings">Settings</string>
    <string name="anyHelpTitle">Need Any Help?</string>
    <string name="app_name">CanIEatThis</string>
    <string name="barcodeNumberHint">Barcode Number</string>
    <string name="bottomButtonText">Scan Barcode</string>
    <string name="checkForUpdates">Check for Updates to Local Database</string>
    <string name="csvURL">http://world.openfoodfacts.org/data/en.openfoodfacts.org.products.csv</string>
    <string name="dairySwitchText">Lactose Free</string>
    <string name="databaseDownloadOffline">Database will be downloaded next time you go online</string>
    <string name="description">Describe any issues with the product info</string>
    <string name="dietaryPreferencesTitle">Dietary Preferences</string>
    <string name="email_address">Email Address</string>
    <string name="energyError">Please enter an energy amount</string>
    <string name="energyLabelText">Energy</string>
    <string name="energyPer100gHint">Energy Per 100g/ml</string>
    <string name="energyPerHint">Energy (kJ)</string>
    <string name="energyPerServingHint">Energy Per Serving</string>
    <string name="fineLocationRationale">Access to your location is required to find places near you!</string>
    <string name="glutenFreePrefSummary">Do you need to avoid gluten?</string>
    <string name="glutenFreeQuestion">Does this place have an option suitable for people needing to avoid gluten?</string>
    <string name="glutenFreeSwitchText">Gluten Free</string>
    <string name="goToAppSettings">Go to app settings to enable access to your location</string>
    <string name="grantPermissionText">Grant Permission</string>
    <string name="helpErrorText">Please describe any issues you are having, or tap outside the box to dismiss this window.</string>
    <string name="infoWindowProvideInfoText">Have you been here?\nClick here to provide information!</string>
    <string name="ingredient">"Ingredient: %1$s"</string>
    <string name="ingredientsHint">Ingredients (As they appear on the packet)</string>
    <string name="ingredientsTextViewText">Ingredients will be appear here</string>
    <string name="ingredientsTitleText">Ingredients</string>
    <string name="introTextViewText">Use the search button in the top right to search for an ingredient, or use the bar code button below to scan a product and find its information</string>
    <string name="issueEmailSubject">Issue with Product Information</string>
    <string name="issuesUrl">https://github.com/addrum/CanIEatThis-Public-/issues</string>
    <string name="itemTitleText">Item</string>
    <string name="lactoseFreePrefTitle">Lactose Free</string>
    <string name="lactoseFreeQuestion">Does this place have a lactose free option?</string>
    <string name="lactosePrefSummary">Do you need to avoid lactose?</string>
    <string name="locationButtonContentDescription">My Location Button</string>
    <string name="mapOfflineText">Looks like you\'re offline! We may not be able to display new information.</string>
    <string name="markerExampleDescription">Marker information only appears when we have sufficient information. In the above picture, Gluten Free information is not displayed as not enough people have submitted information about it. Please help collect information by pressing the marker and submitting information if you have been here!</string>
    <string name="markerInfoExampleTitle">Marker Info Example</string>
    <string name="needHelpDescription">If anything is wrong with the information displayed after scanning or adding a product, or after searching for an ingredient, Click the blue ? icon in the bottom right! Alternatively you can press the menu button then go to About. There you will find a support email address or you can report the issue on GitHub!</string>
    <string name="no">no</string>
    <string name="noEnergyCheckedError">Please check either energy per serving or energy per 100g/ml</string>
    <string name="noInfoOnPlace">We currently don\'t have enough information about this place to display dietary suitability.</string>
    <string name="noIngredientsFoundText">No ingredients found</string>
    <string name="noTracesFound">No traces found</string>
    <string name="offBaseAPIUrl">http://world.openfoodfacts.org/api/v0/product/</string>
    <string name="offUrl">http://openfoodfacts.org</string>
    <string name="packageName">com.adamshort.canieatthis</string>
    <string name="permissionsRequestTitle">Permissions Request</string>
    <string name="placesDataSubmitted">Places data submitted successfully</string>
    <string name="placesSubmittingError">There was an issue submitting info</string>
    <string name="placesUrl">https://maps.googleapis.com/maps/api/place/nearbysearch/json?location="</string>
    <string name="portionError">You must enter a portion size when selecting energy per serving</string>
    <string name="portionSize">Portion Size (e.g. 30g or 1 biscuit)</string>
    <string name="product">"Product: %1$s"</string>
    <string name="productImageButtonText">PRODUCT IMAGE</string>
    <string name="productNameHint">Product Name</string>
    <string name="productSubmitButtonText">SUBMIT</string>
    <string name="quantityHint">Quantity</string>
    <string name="ratingLabel">Rating:</string>
    <string name="requiredField">Required field.</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for an ingredient</string>
    <string name="searchViewQueryHint">Search for an ingredient</string>
    <string name="showMorePlaces">Show More</string>
    <string name="slide1Desc">Welcome!</string>
    <string name="slide1Title">CanIEatThis</string>
    <string name="slide2ButtonLabel">Download Database</string>
    <string name="slide2Desc">"To enable offline scanning of products, we need to download the database. Press the button below to do that now! (You will see a download notification appear if you are online, if not you'll see one when you regain a connection.)""</string>
    <string name="slide2Title">Download Offline Database</string>
    <string name="slide3Desc">Use the dropdown below to set how often you\'d like to download the offline database (updated daily).</string>
    <string name="slide4Desc">In order to find restaurants, we need access to your location. Press the button below to do that now!</string>
    <string name="slide4Title">Finding Restaurants Near You</string>
    <string name="slide5Desc">Check the boxes below to set your preferences. These are used throughout the app to personalise the experience (including showing places to eat near you).</string>
    <string name="slide5TableTitle">Are you:</string>
    <string name="slide5Title">About You!</string>
    <string name="submit">Submit</string>
    <string name="suitableTitleText">Suitable for:</string>
    <string name="tracesHint">Traces (e.g. Nuts, Wheat, Milk)</string>
    <string name="tracesTextViewText">Traces will be appear here</string>
    <string name="tracesTitleText">Traces</string>
    <string name="twitter">CanIEatThisApp</string>
    <string name="unitSpinnerPrompt">Unit</string>
    <string name="updateCheckFrequency">Update Check Frequency</string>
    <string name="veganPrefSummary">Are you vegan?</string>
    <string name="veganPrefTitle">Vegan</string>
    <string name="veganQuestion">Does this place have a vegan option?</string>
    <string name="veganSwitchText">Vegan</string>
    <string name="vegetarianPrefSummary">Are you vegetarian?</string>
    <string name="vegetarianPrefTitle">Vegetarian</string>
    <string name="vegetarianQuestion">Does this place have a vegetarian option?</string>
    <string name="vegetarianSwitchText">Vegetarian</string>
    <string name="yes">yes</string>
    <string name="ingredientNotFound">Ingredient not found</string>
</resources>
