<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            tools:context="com.adamshort.canieatthis.AddProductActivity">

    <RelativeLayout
        android:id="@+id/addProductRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_barcode_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_barcode_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/barcodeNumberHint"
                android:inputType="number"
                android:maxLength="13"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_product_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_barcode_number">

            <EditText
                android:id="@+id/input_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/productNameHint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_quantity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_product_name">

            <EditText
                android:id="@+id/input_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantityHint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_energy_per_serving"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_quantity">

            <EditText
                android:id="@+id/input_energy_per_serving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/energyPerServingHint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_energy_per_serving">

            <EditText
                android:id="@+id/input_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredientsHint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_traces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_ingredients">

            <EditText
                android:id="@+id/input_traces"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tracesHint"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/submit_button_linear_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_traces"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/product_submit_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productSubmitButtonText"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/responseRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:minHeight="100dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="invisible"/>

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>